--- a/Esterni/Definizione_di_prodotto/tex/componenti-FE.tex
+++ b/Esterni/Definizione_di_prodotto/tex/componenti-FE.tex
@@ -343,17 +343,17 @@ questa classe si occupa di fornire un'istanza di una cella del tipo richiesto da
 \end{itemize}
 \item \textbf{Attributi}:
 \begin{itemize}
-\item \nogloxy{\texttt{# comment: string}}
+\item \nogloxy{\texttt{\# comment: string}}
 \\ Questo attributo indica un commento che è possibile scrivere all'interno di ogni blocco
-\item \nogloxy{\texttt{# expanded: bool}}
+\item \nogloxy{\texttt{\# expanded: bool}}
 \\ Questo attributo indica se l'elemento è ridotto oppure è visibile per intero
-\item \nogloxy{\texttt{# hidden: bool}}
+\item \nogloxy{\texttt{\# hidden: bool}}
 \\ Questo attributo indica se la cella deve essere visualizzata
-\item \nogloxy{\texttt{# offsetY: int}}
+\item \nogloxy{\texttt{\# offsetY: int}}
 \\ Questo attributo indica quanto deve essere spostata la cella nel diagramma delle attività. Questo valore viene gestito da /texttt{ProjectView}
-\item \nogloxy{\texttt{# type: string}}
+\item \nogloxy{\texttt{\# type: string}}
 \\ Questo attributo indica il tipo della cella,in modo  che questa possa essere identificata facilmente da chi la usa
-\item \nogloxy{\texttt{# xtype: string}}
+\item \nogloxy{\texttt{\# xtype: string}}
 \\ Questo attributo indica il tipo della cella che verrà poi visualizzato. Verrà ridefinito da ogni classe che eredita questa
 \end{itemize}
 \item \textbf{Metodi}:
@@ -542,7 +542,7 @@ questa classe rappresenta le caratteristiche dello stereotipo che viene assegnat
 \end{itemize}
 \item \textbf{Attributi}:
 \begin{itemize}
-\item \nogloxy{\texttt{# type: string}}
+\item \nogloxy{\texttt{\# type: string}}
 \\ Questo attributo indica il tipo della cella,in modo che questa possa essere identificata facilmente da chi la usa
 \end{itemize}
 \item \textbf{Metodi}:
@@ -589,11 +589,11 @@ eredita dalla classe \texttt{Link} di \jointjs{} e viene estesa da tutte le clas
 \end{itemize}
 \item \textbf{Attributi}:
 \begin{itemize}
-\item \nogloxy{\texttt{# source: string}}
+\item \nogloxy{\texttt{\# source: string}}
 \\ Questo attributo indica l'id della cella di partenza della relazione
-\item \nogloxy{\texttt{# target: string}}
+\item \nogloxy{\texttt{\# target: string}}
 \\ Questo attributo indica l'id della cella di destinazione della relazione
-\item \nogloxy{\texttt{# type: string}}
+\item \nogloxy{\texttt{\# type: string}}
 \\ Questo attributo indica il tipo della relazione,in modo che questa possa essere identificata facilmente da chi la usa
 \end{itemize}
 \item \textbf{Metodi}:
