modifiche adr e pdq

--- a/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_4_0_0.tex
+++ b/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_4_0_0.tex
@@ -3805,7 +3805,7 @@ Un approccio simile si è rivelato utile allo scopo di chiarire i requisiti del 
 
 \hyperlink{RQO1.2}{RQO1.2} & \textcolor{green}{Implementato}\\ \hline
 
-\hyperlink{RQO1.2.1}{RQO1.2.1} & \textcolor{greeen}{Implementato}\\ \hline
+\hyperlink{RQO1.2.1}{RQO1.2.1} & \textcolor{green}{Implementato}\\ \hline
 
 \hyperlink{RQO1.3}{RQO1.3} &  \textcolor{green}{Implementato}\\ \hline
 
