--- a/Esterni/Piano_di_qualifica/diario.tex
+++ b/Esterni/Piano_di_qualifica/diario.tex
@@ -2,6 +2,10 @@
 % da includere con \include{diario}
 
 \begin{diario}
+	4.0.0 & {\LB} (Responsabile) & 11/05/2017 & Approvazione del documento \\ \hline
+	3.1.0 & {\MM} (Verificatore) & 10/05/2017 & Verifica del documento \\ \hline
+	3.0.3 & {\LS} (Verificatore) & 9/05/2017 & Stesura resoconto attività \\ \hline
+	3.0.2 & {\AZ} (Verificatore) & 9/05/2017 & Stesura resoconto attività \\ \hline
 	3.0.1 & {\GG} (Verificatore) & 02/05/2017 & Aggiunta tabella \ref{tab:pkg-ti} \\ \hline
 	3.0.0 & {\AZ} (Responsabile) & 09/04/2017 & Approvazione del documento \\ \hline
 	2.1.0 & {\PB} (Verificatore) & 30/03/2017 & Verifica del documento \\ \hline
