--- a/Esterni/Piano_di_progetto/Piano_di_progetto_3_0_0.tex
+++ b/Esterni/Piano_di_progetto/Piano_di_progetto_3_0_0.tex
@@ -2000,7 +2000,8 @@ Al fine di conseguire il miglior risultato possibile, il team ha deciso di utili
 
 \item Sono state rilevate variazioni nei costi.
 
-\item Si riportano le tabelle di divisione oraria effettive e i relativi costi. \textbf{Nota}: le variazioni tra parentesi si riferiscono all'ultimo preventivo a finire presentato.
+\item Si riportano le tabelle di divisione oraria effettive e i relativi costi.
+\item  \textbf{Nota}: le variazioni tra parentesi si riferiscono all'ultimo preventivo a finire presentato.
 
 \end{itemize}
 
